# rs-email-newsletter

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: general.yml
.sqlx/: query-39cc658e53f4be4549b9125996bb84ca74f572c9f8ab6aa28527e155100706da.json
configuration/: base.yaml  production.yaml
migrations/: 20231016184409_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/email_client/: mod.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
